docs/posts/4.2.0/configuration/server.mdx
---
title: Remix Development Tools Server Configuration
description: Configuration options for the Remix Development Tools server
---

import Info from "./info.tsx";
import Warn from "./warn.tsx";

As with the client configuration, we will first see the full configuration type:

```ts
interface RemixServerConfig {
  silent?: boolean;
  logs?: {
    cookies?: boolean;
    defer?: boolean;
    actions?: boolean;
    loaders?: boolean;
    cache?: boolean;
    siteClear?: boolean;
  };
}
```

## `silent`

When `true`, the server will not log anything to the console. This is useful for production environments.

## `logs`

This object allows you to configure the server logs. Each key is a log type and the value is a boolean indicating whether to log that type.
All are `true` by default so you don't have to provide anything, if you want to be granular you can, otherwise you can use the `silent` option to turn off 
all logs.

### `cookies`

When `true`, the server will log all cookies sent by the server in the "Set-Cookie" header.

### `defer`

When `true`, the server will log all deferred actions. 
The following gets logged:
- The defer location
- The keys that were deferred
- The time it took for each key to resolve

### `actions`

When `true`, the server will log all actions that are hit with a request.

### `loaders`

When `true`, the server will log all loaders that are hit with a request.

### `cache`

When `true`, the server will log all loaders/actions that return a `Cache Control` header.

### `siteClear`

When `true`, the server will log when the site cache is cleared, or anything else with the `Clear-Site-Data` header.